--- a/index.html
+++ b/index.html
@@ -69,17 +69,22 @@
     <div id="part1">
         <span>2nd Test . New zealand tour of Sri...</span>
 <button>Test</button>
-<div id="div1"> <img src="ind.png" width="30px" height="40px">
+<br>
+<br>
+
+<div id="div1"> <img src="ind.png" width="50px" >
     <span id="span">India</span>
 </div>
+<br>
 <div>
     <div id="div2">
-        <img src="ban.jpeg" width="30px" >
+        <img src="ban.jpeg" width="50px" height="20px" >
         <span id="2span2">Bangladesh</span>
-
+<br>
     </div>
     <p>Tomorrow . 9:30 AM</p>
 </div>
+<br>
 
   <div id="part2">
     <span>SCHEDULE</span>
